WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69574
Four media tests failing on Lion due to incorrect cached times.
https://bugs.webkit.org/show_bug.cgi?id=69574
Summary
Four media tests failing on Lion due to incorrect cached times.
Jer Noble
Reported
2011-10-06 15:26:51 PDT
Failing tests: media/video-pause-immediately.html media/video-played-collapse.html media/video-played-ranges-1.html media/video-played-reset.html
Attachments
Patch
(3.07 KB, patch)
2011-10-06 15:38 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2011-10-06 15:38:43 PDT
Created
attachment 110048
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-10-31 21:02:08 PDT
Jer, are you going to commit this patch?
Jer Noble
Comment 3
2011-11-01 11:21:40 PDT
Comment on
attachment 110048
[details]
Patch Whoops, I believe I was waiting until the chromium-mac bot had a chance to chew on it, since it changes HTMLMediaElement. Setting cq+.
WebKit Review Bot
Comment 4
2011-11-01 12:05:38 PDT
Comment on
attachment 110048
[details]
Patch Clearing flags on attachment: 110048 Committed
r98988
: <
http://trac.webkit.org/changeset/98988
>
WebKit Review Bot
Comment 5
2011-11-01 12:05:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug