Four media tests failing on Lion due to incorrect cached times. https://bugs.webkit.org/show_bug.cgi?id=69574

Reviewed by Eric Carlson.

Source/WebCore:

Do not invalidate the cached time when receiving a mediaPlayerRateChanged notification
while paused. AVFoundation in particular can return different results for currentTime()
when asked after being paused, breaking layout tests.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerRateChanged):

LayoutTests:

Some media engines will cause multiple timeupdate events after pausing; so deregister
the timeupdate event listener after receiving the first one.

* media/video-pause-immediately.html:


Canonical link: https://commits.webkit.org/87592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98988 268f45cc-cd09-0410-ab3c-d52691b4dbfc